@@ -33,6 +33,8 @@
           <element id="library" level="project" name="org.mariadb.jdbc:mariadb-java-client:2.4.0" />
           <element id="library" level="project" name="commons-codec:commons-codec:1.11" />
           <element id="library" level="project" name="com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.9.2" />
+          <element id="library" level="project" name="com.microsoft.azure:adal4j:1.6.4" />
+          <element id="library" level="project" name="org.json:json:20190722" />
         </element>
       </element>
     </root>
