@@ -54,5 +54,6 @@
     <orderEntry type="library" name="commons-codec:commons-codec:1.11" level="project" />
     <orderEntry type="library" name="com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.9.2" level="project" />
     <orderEntry type="library" name="com.microsoft.azure:adal4j:1.6.4" level="project" />
+    <orderEntry type="library" name="org.json:json:20190722" level="project" />
   </component>
 </module>
